--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    
     <head>
         <meta charset="utf-8"/>
-        <title>FlameOnePage Free Template by FairTech</title>
+        <title>服務學習</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="FlameOnePage freebie theme for web startups by FairTech SEO." name="description"/>
@@ -96,8 +96,7 @@
                             </div>
                             <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Take a Tour</a>
                         </div>
-                    </div>
-                </div>
+                    </div>                </div>
             </div>
         </div>
         <!--========== SLIDER ==========-->
