--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 					
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">心得</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">修玩具</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">陪小孩</a></li>
-								<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#services">專案</a></li>
+								<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#services">專案</a></li
                             </ul>
                         </div>
                     </div>
