--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 <h1 class="carousel-title">第三組</h1>
                                 <p class="color-white">服務學習 <br/> service learning</p>
                             </div>
-                            <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Details</a>
+                            <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Start</a>
                         </div>
                     </div>
                 </div>
