--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 					
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">心得</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">修玩具</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">陪小孩</a></li>
-								<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#services">專案</a></li
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">首頁</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">心得1</a></li>
+								<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#products">心得2</a></li
                             </ul>
                         </div>
                     </div>
@@ -107,22 +106,22 @@
                     <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
                     <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 sm-margin-b-30">
                         <div class="margin-b-60">
-                            <h2>Harmonious Planning</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna ut consequat siad esqudiat dolor</p>
+                            <h2>李啟赫</h2>
+                            <p>這次的體驗讓我學會了關懷與耐心，協助幫忙著那邊的老師照顧小孩，想辦法讓他們能和一般學生一樣的受到教育和學習，在過程中也思考如何讓他們的生活更方便簡單，健全發展，也試著吧我們的專長發揮作用。</p>
                         </div>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/01.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".2s">
                     </div>
                     <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
                         <div class="margin-b-60">
-                          <h2>Easy Integration</h2>
-                          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna ut consequat siad esqudiat dolor</p>  
+                          <h2>李駿賢</h2>
+                          <p>在寶貝中心學習到了耐心陪伴，以及了解他們的不便，如何利用自己所學幫助他們更容易融入社會，是這次服務學習所體認到的，也更珍惜自己所擁有的一切。</p>  
                         </div>
 						 <img class="full-width img-responsive wow fadeInUp" src="img/500x500/02.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".3s">
                     </div>
                     <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
                         <div class="margin-t-60 margin-b-60">
-                            <h2>Superior Support</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna ut consequat siad esqudiat dolor</p>
+                            <h2>張育豪</h2>
+                            <p>我第一次去到寶貝潛能開發中心，看到那邊的小朋友每個都很有活力，那種不因任何病痛而放棄追逐快樂的樣子，讓我對於自己現有的事物感到更加的珍惜。</p>
                         </div>
                         <img class="full-width img-responsive wow fadeInUp" src="img/500x500/03.jpg" alt="Portfolio Image" data-wow-duration=".3" data-wow-delay=".4s">
                     </div>
@@ -214,8 +213,8 @@
                         <div class="margin-b-20">
                             <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
                         </div>
-                        <h4><a href="#">Interior</a> <span class="text-uppercase margin-l-20">Architecture</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <h4><a href="#">江栢祥</a> <span class="text-uppercase margin-l-20">Architecture</span></h4>
+                        <p>前往中心服務學習體會了面對身心障礙的孩子必須要有非常大的愛心還有耐心，但是能夠將專業能力應用在幫助社福機構也是讓我感到自己的所學沒有白費並能夠幫助別人。</p>
                         <a class="link" href="#">Details</a>
                     </div>
                     <!-- End Latest Products -->
